# mp3-midi-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml
src/: llm.rs  main.rs
static/: index.html
